apps/prod2/jenkins-cbg/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins-cbg
  labels:
    app.kubernetes.io/part-of: jenkins-cbg-migrate
