apps/prod2/jenkins-cbg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-cbg
  labels:
    app.kubernetes.io/name: jenkins-cbg
    app.kubernetes.io/part-of: jenkins-cbg-migrate
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jenkins-cbg
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: agent-listener
      port: 50000
      targetPort: 50000
      protocol: TCP
